flux/infrastructure/base/democratic-csi/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-democratic-csi-nfs
spec:
  description: "Allow the csi driver to access the nfs share and zfs pool"
  endpointSelector:
    matchLabels:
      app: democractic-csi
  egress:
    - toCIDR:
        - 192.168.1.4/32
    - toFQDNs:
        - matchName: system76.home
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
            - port: "2049"
              protocol: TCP
            - port: "111"
              protocol: ANY
